--- a/view/userCenter.html
+++ b/view/userCenter.html
@@ -95,7 +95,7 @@
             <!--地址管理-->
             <div class="user-area user-area-2">
                 <div class="user-info">
-                    <a href="./index.php?c=base_user&a=addressList">
+                    <a href="./addressList.html">
                         <i class="icon iconfont">&#xe61a;</i>地址管理<i class="icon iconfont arrow">&#xe654;</i>
                     </a>
                 </div>
