--- a/view/shopList.html
+++ b/view/shopList.html
@@ -71,7 +71,16 @@
             </div>
     <div class="goods-wrap"  data-sender-time="11:20-13:00，17:20-20:30"  data-is-plate-time="1">
         <div class="goods-area">
-
+            <a href="./index.php?c=dining&a=shopInfo&shop_id='+id+'" class="goods-list">
+                <img src="../image/20170523113702284_thumb.jpg" class="goods-img" />
+                <div class="goods-name limit-text">上好佳</div>
+                <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
+                <div class="goods-address limit-text">江西师大二食堂</div>
+                <div class="goods-info limit-text">配送时间：8:00-12:00,14:00-17:00</div>
+                <div class="goods-price">配送费0</div>
+                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+                <span class="goods-sale">月售100份</span>
+            </a>
             <div id="get-more"></div>
         </div>
     </div>
