--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -84,7 +84,34 @@
                                             </div>
                                     </div>
                 <div class="dining-area">
-
+                    <div class="dining-list">
+                        <a href="./index.php?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">辣椒炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>12</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">售出22份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num" data-id="'+id+'">100</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./index.php?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">售出25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="shop-list-area">
