--- a/view/addressList.html
+++ b/view/addressList.html
@@ -33,6 +33,17 @@
                 <span class="back"><i class="icon iconfont">&#xe653;</i></span><span>地址列表</span><a href="javascript:;" class="complete" style="display: none;">完成</a><a href="javascript:;" class="edit" style="display: block;">编辑</a>
             </div>
             <div class="address-list">
+                <div class="address-area">
+                    <div class="address-info">
+                        江西师大（瑶湖小区）东门
+                    </div>
+                    <div>
+                        <span>黄杰（先生）</span><span class="phone"> 15070849147</span>
+                    </div>
+                </div>
+                <div class="item-select">
+
+                </div>
                 <p class="text-danger">暂无地址。</p>
 
             </div>
