--- a/view/userCenter.html
+++ b/view/userCenter.html
@@ -2,9 +2,6 @@
 <html lang="zh-cn">
 <head>
     <title>用户中心</title>
-
-    <!--2015-07-20 the lastest version designed by jjhu of change-->
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -13,9 +10,6 @@
     <meta name="author" content="安徽千界信息科技有限公司">
     <meta name="robots" content="index,follow">
     <meta name="application-name" content="www.changekeji.com">
-
-    <!--2016-08-24 the lastest version designed by joy of change-->
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -103,7 +97,7 @@
             <!--推广页面-->
             <div class="user-area user-area-2">
                 <div class="user-info">
-                    <a href="./index.php?c=dining&a=promotionPage&user_id=7199">
+                    <a href="./promotionPage.html">
                         <i class="icon iconfont">&#xe6f7;</i>我要分享，吃霸王餐咯<i class="icon iconfont arrow">&#xe654;</i>
                     </a>
                 </div>
