--- a/view/addAddress.html
+++ b/view/addAddress.html
@@ -3,18 +3,14 @@
 <head>
     <title>添加新地址</title>
     <link rel="stylesheet" href='../css/sm.min.css'>
-
-
-    <!--2016-08-24 the lastest version designed by joy of change-->
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
+    <meta name="application-name" content="XXXX">
 
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
@@ -59,7 +55,7 @@
             </div>
         </div>
         <!--页面脚部-->
-        <div id="footer">技术支持：<a href="http://www.changekeji.com">千界科技</a></div>
+        <div id="footer">技术支持：<a href="#">杰喜科技有限公司</a></div>
 
     </div>
     <!--提示框-->
