--- a/view/goodsDetail.html
+++ b/view/goodsDetail.html
@@ -7,17 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
-    <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
+    <meta name="application-name" content="XXXX">
 
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
