--- a/view/shopList.html
+++ b/view/shopList.html
@@ -1,31 +1,16 @@
-<!--用户登录-->
+<!--私厨列表-->
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>首页</title>
-
-    <!--2015-07-20 the lastest version designed by jjhu of change-->
-
+    <title>私厨外卖-私厨</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
-    <!--2016-08-24 the lastest version designed by joy of change-->
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
-    <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
+    <meta name="application-name" content="XXXX">
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
@@ -44,7 +29,7 @@
         <div class="top-item list "><span class="label-name">筛选</span><i class="select icon iconfont">&#xe7cb;</i></div>
     </div>
     <div class="search-area">
-        <input type="search" class="search-input" placeholder="请输入商家名称">
+        <input type="search" class="search-input" placeholder="请输入私厨或私房菜">
         <span class="search-btn"><i class="icon iconfont">&#xe607;</i></span>
     </div>
     <div class="label-area hidden">
@@ -94,11 +79,7 @@
     </a>
     <a href="./shopList.html" class="nav-list active">
         <span class="nav-icon"><i class="icon iconfont">&#xe63a;</i></span>
-        <span class="nav-name">商家列表</span>
-    </a>
-    <a href="./orderList.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe675;</i></span>
-        <span class="nav-name">订单列表</span>
+        <span class="nav-name">私厨</span>
     </a>
     <a href="./userCenter.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
