--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,41 @@
+
+/****顶部搜索****/
+.search-area{
+    width:100%;
+    max-width:640px;
+    position:fixed;
+    height:46px;
+    top:0px;
+    padding:5px 10px;
+   /* border-bottom:1px solid #eee;*/
+   /* background:rgba(255,255,255,0.7);*/
+    z-index:998;
+}
+.search-input{
+    width:100%;
+    height:100%;
+    padding-right:50px;
+    padding-left:4px;
+    outline:none;
+    border:1px solid #008000;
+    border-radius:8px;
+}
+.search-btn{
+    display:inline-block;
+    position:absolute;
+    top:5px;
+    right:10px;
+    width:50px;
+    height:35px;
+    line-height:35px;
+    text-align:center;
+    border-left:1px solid #008000;
+    color:#008000;
+    cursor:pointer;
+}
+.search-btn .icon{
+    font-size:19px;
+}
 /**幻灯片**/
 .swiper-container .swiper-slide img{
     width: 100%;
@@ -81,7 +119,7 @@ a.goods-list {
     height: 53px;
     border-top: 1px solid #eee;
     border-bottom:1px solid #eee;
-    
+
 }
 .goods-news .news-image{
 	position:absolute;
