--- a/view/index.html
+++ b/view/index.html
@@ -1,31 +1,16 @@
-<!--用户登录-->
+<!--首页-->
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>巢湖学院-订餐首页</title>
-
-    <!--2015-07-20 the lastest version designed by jjhu of change-->
-
+    <title>私厨外卖—首页</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
-    <!--2016-08-24 the lastest version designed by joy of change-->
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
-    <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
+    <meta name="application-name" content="XXXX">
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
@@ -38,6 +23,11 @@
 <body>
 <!--主容器-->
 <div id="container" class="container-fluid">
+    <!-- 搜索框 -->
+    <div class="search-area">
+        <input type="search" class="search-input" placeholder="请输入私厨或私房菜">
+        <span class="search-btn"><i class="icon iconfont">&#xe607;</i></span>
+    </div>
         <!--幻灯片轮播-->
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -52,56 +42,56 @@
     </div>
 
     <div class="label-area">
-                <a href="./index.php?c=dining&a=shopList&label_id=32" class="label-list">
+        <a href="./index.php?c=dining&a=shopList&label_id=32" class="label-list">
             <img src="../image/20170313085020652.png" class="label-img" />
             <span class="limit-text label-name">中餐</span>
         </a>
-                <a href="./index.php?c=dining&a=shopList&label_id=31" class="label-list">
+        <a href="./index.php?c=dining&a=shopList&label_id=31" class="label-list">
             <img src="../image/20170313085040919.png" class="label-img" />
             <span class="limit-text label-name">西餐</span>
         </a>
-                <a href="./index.php?c=dining&a=shopList&label_id=33" class="label-list">
+        <a href="./index.php?c=dining&a=shopList&label_id=33" class="label-list">
             <img src="../image/20170313085107379.png" class="label-img" />
             <span class="limit-text label-name">火锅</span>
         </a>
-                <a href="./index.php?c=dining&a=shopList&label_id=34" class="label-list">
+        <a href="./index.php?c=dining&a=shopList&label_id=34" class="label-list">
             <img src="../image/20170313085123193.png" class="label-img" />
             <span class="limit-text label-name">小吃</span>
         </a>
-                <a href="./index.php?c=dining&a=shopList&label_id=35" class="label-list">
+        <a href="./index.php?c=dining&a=shopList&label_id=35" class="label-list">
             <img src="../image/20170313085137159.png" class="label-img" />
             <span class="limit-text label-name">甜品</span>
         </a>
-            </div>
+    </div>
     <div class="goods-news">
         <div class="news-image"><img src="../image/news.png"></div>
         <marquee direction="up" truespeed="truespeed" scrollamount=2 height="50px" behavior="scroll" style="text-align: center" >
-                        <div class="news">恭喜微凉通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜微凉通过小伙伴的分享获得了0.02元饭票红包</div>
-                        <div class="news">恭喜微凉通过小伙伴的分享获得了0.06元饭票红包</div>
-                        <div class="news">恭喜微凉通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜微凉通过小伙伴的分享获得了0.03元饭票红包</div>
-                        <div class="news">恭喜心软是病、通过小伙伴的分享获得了0.01元饭票红包</div>
-                        <div class="news">恭喜未凝。通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜锦书予你通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜小小通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜王姶。通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜木易亦山通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">恭喜東风通过小伙伴的分享获得了0.04元饭票红包</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">恭喜Tomorrow通过小伙伴的分享获得了0.4元饭票红包</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">恭喜钱东东获得0.01元饭票,</div>
-                        <div class="news">恭喜陈孟辉通过小伙伴的分享获得了0.64元饭票红包</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">恭喜金豪获得0.01元饭票红包</div>
-                        <div class="news">恭喜Destiny获得0.08元饭票红包</div>
-                        <div class="news">恭喜阳光获得0.02元饭票红包</div>
-                        <div class="news">推广二维码获得饭票1元</div>
-                        <div class="news">超急邦，一个专送寝室的外卖平台！</div>
-                    </marquee>
+            <div class="news">恭喜微凉通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜微凉通过小伙伴的分享获得了0.02元饭票红包</div>
+            <div class="news">恭喜微凉通过小伙伴的分享获得了0.06元饭票红包</div>
+            <div class="news">恭喜微凉通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜微凉通过小伙伴的分享获得了0.03元饭票红包</div>
+            <div class="news">恭喜心软是病、通过小伙伴的分享获得了0.01元饭票红包</div>
+            <div class="news">恭喜未凝。通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜锦书予你通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜小小通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜王姶。通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜木易亦山通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">恭喜東风通过小伙伴的分享获得了0.04元饭票红包</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">恭喜Tomorrow通过小伙伴的分享获得了0.4元饭票红包</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">恭喜钱东东获得0.01元饭票,</div>
+            <div class="news">恭喜陈孟辉通过小伙伴的分享获得了0.64元饭票红包</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">恭喜金豪获得0.01元饭票红包</div>
+            <div class="news">恭喜Destiny获得0.08元饭票红包</div>
+            <div class="news">恭喜阳光获得0.02元饭票红包</div>
+            <div class="news">推广二维码获得饭票1元</div>
+            <div class="news">超急邦，一个专送寝室的外卖平台！</div>
+        </marquee>
     </div>
     <div class="goods-wrap" data-sender-time="11:20-13:00，17:20-20:30" data-is-plate-time="1">
         <div class="wrap-info">
@@ -133,18 +123,15 @@
     </a>
     <a href="./shopList.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe63a;</i></span>
-        <span class="nav-name">商家列表</span>
-    </a>
-    <a href="./orderList.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe675;</i></span>
-        <span class="nav-name">订单列表</span>
+        <span class="nav-name">私厨</span>
     </a>
     <a href="./userCenter.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
-        <span class="nav-name">个人中心</span>
+        <span class="nav-name">我的</span>
     </a>
 </div>
 <!--提示框-->
+
 <!-- 模态框（Modal） 提示框-->
 <div class="modal fade" id="myAlertModal" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
@@ -166,9 +153,9 @@
                 <button type="button" class="btn btn-default close-action" data-dismiss="modal">关闭</button>
 
             </div>
-        </div><!-- /.modal-content -->
+        </div>
     </div>
-</div><!-- /.modal -->
+</div>
 <!--弹框的遮罩层-->
 <div id="maskDialog"></div>
 <!--其他遮罩层 如加载框-->
