--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>首页</title>
-
-    <!--2015-07-20 the lastest version designed by jjhu of change-->
-
+    <title>商家详情</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
-    <!--2016-08-24 the lastest version designed by joy of change-->
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
-    <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-
+    <meta name="application-name" content="XXXX">
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
