--- a/view/userCenter.html
+++ b/view/userCenter.html
@@ -1,23 +1,16 @@
+<!-- 我的 -->
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>用户中心</title>
+    <title>我的</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
+    <meta name="author" content="XXXX">
     <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="安徽千界信息科技有限公司">
-    <meta name="robots" content="index,follow">
-    <meta name="application-name" content="www.changekeji.com">
+    <meta name="application-name" content="XXXX">
 
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
@@ -82,9 +75,25 @@
 
             <!--积分提现-->
 
+            <div class="user-area user-area-2">
+                <div class="user-info">
+                     <a href="./orderList.html">
+                        <i class="icon iconfont icon-jifen"></i>我的积分<i class="icon iconfont arrow">&#xe654;</i>
+                    </a>
+                </div>
+            </div>
             <!--优惠券是否启用-->
 
             <!--会员卡是否启用-->
+
+            <!-- 我的订单 -->
+            <div class="user-area user-area-2">
+                <div class="user-info">
+                     <a href="./orderList.html">
+                        <i class="icon iconfont">&#xe675;</i>订单列表<i class="icon iconfont arrow">&#xe654;</i>
+                    </a>
+                </div>
+            </div>
 
             <!--地址管理-->
             <div class="user-area user-area-2">
@@ -141,11 +150,7 @@
     </a>
     <a href="./shopList.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe63a;</i></span>
-        <span class="nav-name">商家列表</span>
-    </a>
-    <a href="./orderList.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe675;</i></span>
-        <span class="nav-name">订单列表</span>
+        <span class="nav-name">私厨</span>
     </a>
     <a href="./userCenter.html" class="nav-list active">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
