--- a/view/orderList.html
+++ b/view/orderList.html
@@ -24,10 +24,10 @@
     <div id="container" class="container-fluid">
         <div class="head-nav">
             <span class="head-item active" data-status="">全部</span>
-            <span class="head-item " data-status="0">待付款</span>
-            <span class="head-item " data-status="3">已接单</span>
-            <span class="head-item " data-status="4">送餐中</span>
-            <span class="head-item " data-status="5">已完成</span>
+            <!-- <span class="head-item " data-status="0">待付款</span> -->
+            <span class="head-item " data-status="3"><!-- 已接单 --> 正在做饭</span>
+            <span class="head-item " data-status="4"><!-- 送餐中 --> 正在配送</span>
+            <span class="head-item " data-status="5"><!-- 已完成 -->完成配送</span>
         </div>
         <div class="content-wrap">
             <div class="order-list-wrap" data-id="1">
@@ -642,7 +642,7 @@
     </a>
     <a href="./userCenter.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
-        <span class="nav-name">个人中心</span>
+        <span class="nav-name">我的</span>
     </a>
 </div>
     <!--提示框-->
