--- a/css/orderList.css
+++ b/css/orderList.css
@@ -1,7 +1,6 @@
 @CHARSET "UTF-8";
 
 /*****头部信息******/
-
 .head-nav {
 	height: 38px;
 	line-height: 37px;
@@ -19,7 +18,8 @@
 
 .head-nav .head-item {
 	display: block;
-	width: 20%;
+	width: 25%;
+	width: calc(100%/4);
 	text-align: center;
 	border-right: 1px solid #eee;
 }
