--- a/view/shopList.html
+++ b/view/shopList.html
@@ -83,7 +83,7 @@
     </a>
     <a href="./userCenter.html" class="nav-list ">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
-        <span class="nav-name">个人中心</span>
+        <span class="nav-name">我的</span>
     </a>
 </div>
 <!--提示框-->
