--- a/view/userCenter.html
+++ b/view/userCenter.html
@@ -71,35 +71,36 @@
             </div>
 
 
-
-
-            <!--积分提现-->
-
+             <!-- 我的订单 -->
             <div class="user-area user-area-2">
                 <div class="user-info">
                      <a href="./orderList.html">
-                        <i class="icon iconfont icon-jifen"></i>我的积分<i class="icon iconfont arrow">&#xe654;</i>
+                        <i class="icon iconfont">&#xe675;</i>订单管理<i class="icon iconfont arrow">&#xe654;</i>
                     </a>
                 </div>
             </div>
+
+
             <!--优惠券是否启用-->
 
             <!--会员卡是否启用-->
 
-            <!-- 我的订单 -->
-            <div class="user-area user-area-2">
-                <div class="user-info">
-                     <a href="./orderList.html">
-                        <i class="icon iconfont">&#xe675;</i>订单列表<i class="icon iconfont arrow">&#xe654;</i>
-                    </a>
-                </div>
-            </div>
+
 
             <!--地址管理-->
             <div class="user-area user-area-2">
                 <div class="user-info">
                     <a href="./addressList.html">
                         <i class="icon iconfont">&#xe61a;</i>地址管理<i class="icon iconfont arrow">&#xe654;</i>
+                    </a>
+                </div>
+            </div>
+            <!--积分提现-->
+
+            <div class="user-area user-area-2">
+                <div class="user-info">
+                     <a href="./orderList.html">
+                        <i class="icon iconfont icon-jifen"></i>我的积分<i class="icon iconfont arrow">&#xe654;</i>
                     </a>
                 </div>
             </div>
@@ -122,7 +123,7 @@
 
 
             <!--客服电话-->
-                        <div class="user-area user-area-1">
+            <div class="user-area user-area-1">
                 <div class="user-info">
                     <a href="tel:13063216193">
                         <i class="icon iconfont">&#xe65d;</i>客服电话  13063216193
@@ -130,7 +131,7 @@
                 </div>
             </div>
                         <!--外卖员投诉电话-->
-                        <div class="user-area user-area-0">
+            <div class="user-area user-area-0" style="display: none;">
                 <div class="user-info">
                     <a href="tel:15650670862">
                         <i class="icon iconfont">&#xe67f;</i>外卖员投诉电话   15650670862
@@ -154,7 +155,7 @@
     </a>
     <a href="./userCenter.html" class="nav-list active">
         <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
-        <span class="nav-name">个人中心</span>
+        <span class="nav-name">我的</span>
     </a>
 </div>
     <!--提示框-->
